# finall-test-cansat-2026

./: .gitignore  Dockerfile.armv7  scripts.txt
context/: capture.cpp  capture.hpp  encoding.cpp  encoding.hpp  image_transmission_rx.py  image_transmission_tx.py  sensors.py
emissor-raspberry/: .env.example  requirements.txt
emissor-raspberry/src/: config.py  logging_utils.py  packet_protocol.py  pipeline.py  sensors.py  xbee_api.py
emissor-raspberry/src/cpp/: CMakeLists.txt
emissor-raspberry/src/cpp/include/: capture.hpp  encoding.hpp
emissor-raspberry/src/cpp/src/: capture.cpp  encoding.cpp  main.cpp
receptor-fastapi/: .env.example  requirements.txt
receptor-fastapi/app/: config.py  dynamic_csv.py  logging_utils.py  main.py  protocol.py  xbee_worker.py
receptor-fastapi/data/: telemetry.csv
test/: receive_image.py  send_image.py  xbee_frame.py  xbee_pro_s1_config.md
